--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "gdl-thesis-client",
   "version": "1.0.0",
+  "author": "Giacomo De Liberali, giacomodeliberali@gmail.com",
+  "description": "The client side application of the thesis",
   "repository": {
     "type": "git",
-    "url": "https://github.com/giacomodeliberali/thesis.git"
+    "url": "https://github.com/giacomodeliberali/thesis-client.git"
   },
   "scripts": {
     "ng": "ng",
