--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@types/mongodb": "^3.0.9",
-    "mongodb": "^3.0.5",
     "@angular/compiler": "^5.2.9",
     "@angular/core": "^5.2.9",
+    "@types/mongodb": "^3.0.9",
+    "inversify": "^4.11.1",
+    "mongodb": "^3.0.5",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.8"
   },
   "devDependencies": {
