--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@angular/compiler": "^5.2.9",
     "@angular/core": "^5.2.9",
     "@types/mongodb": "^3.0.9",
+    "@types/mongoose": "^5.0.9",
     "inversify": "^4.11.1",
     "mongodb": "^3.0.5",
+    "mongoose": "^5.0.14",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.8"
   },
