--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
     "express-session": "^1.15.6",
-    "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git",
+    "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git#master",
+    "inversify": "^4.11.1",
     "mongodb": "^3.0.5",
+    "mongoose": "^5.0.14",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.8"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.5",
     "@types/express": "^4.0.37",
     "@types/express-session": "^1.15.3",
+    "@types/mongoose": "^5.0.9",
     "codelyzer": "^4.2.1",
     "gulp": "^3.9.1",
     "gulp-tslint": "^8.1.2",
