--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "outDir": "dist",
         "baseUrl": ".",
         "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "paths": {
             "*": [
                 "node_modules/*",
