--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "npm run gulp && node dist/server.js",
     "gulp": "./node_modules/.bin/gulp",
-    "tslint": "./node_modules/.bin/tslint -c tslint.json -p tsconfig.json"
+    "tslint": "./node_modules/.bin/tslint -c tslint.json -p tsconfig.json",
+    "doc": "gulp typedoc",
+    "update": "npm i --save git+https://github.com/giacomodeliberali/thesis-core.git#master"
   },
   "dependencies": {
     "@angular/compiler": "^5.2.9",
@@ -35,6 +37,6 @@
     "gulp-typescript": "^3.2.2",
     "tslint": "^5.7.0",
     "typedoc": "^0.11.1",
-    "typescript": "^2.5.3"
+    "typescript": "^2.8.1"
   }
 }
