--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.15.6",
     "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git#master",
     "inversify": "^4.11.1",
+    "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.14",
     "reflect-metadata": "^0.1.12",
@@ -34,6 +35,7 @@
     "@types/body-parser": "^1.16.5",
     "@types/express": "^4.0.37",
     "@types/express-session": "^1.15.3",
+    "@types/jsonwebtoken": "^7.2.6",
     "@types/mongoose": "^5.0.9",
     "codelyzer": "^4.2.1",
     "gulp": "^3.9.1",
