--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.14",
+    "mongoose-autopopulate": "git+https://github.com/giacomodeliberali/mongoose-autopopulate.git#master",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.8"
   },
