--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
     "express-session": "^1.15.6",
-    "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git#master",
+    "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git#dev",
     "inversify": "^4.11.1",
     "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.5",
