--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/compiler": "^5.2.9",
     "@angular/core": "^5.2.9",
     "@types/mongodb": "^3.0.9",
+    "bcrypt": "^2.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
     "express-session": "^1.15.6",
-    "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git#dev",
+    "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git#master",
     "inversify": "^4.11.1",
     "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.5",
