--- a/package.json
+++ b/package.json
@@ -20,17 +20,22 @@
     "@angular/compiler": "^5.2.9",
     "@angular/core": "^5.2.9",
     "@types/mongodb": "^3.0.9",
+    "@types/passport": "^0.4.5",
+    "@types/passport-jwt": "^3.0.1",
     "bcrypt": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "express": "^4.15.5",
     "express-session": "^1.15.6",
-    "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git#master",
+    "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git",
     "inversify": "^4.11.1",
     "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.14",
     "mongoose-autopopulate": "git+https://github.com/giacomodeliberali/mongoose-autopopulate.git#master",
+    "passport": "^0.4.0",
+    "passport-google-plus-token": "^2.1.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.8"
   },
