--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "dependencies": {
     "@angular/compiler": "^5.2.9",
     "@angular/core": "^5.2.9",
+    "@types/cors": "^2.8.3",
     "@types/mongodb": "^3.0.9",
     "@types/passport": "^0.4.5",
     "@types/passport-jwt": "^3.0.1",
     "bcrypt": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.15.5",
     "express-session": "^1.15.6",
     "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git",
