--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jquery": "1.12.4",
     "nouislider": "9.2.0",
     "rxjs": "^5.5.7",
+    "sweetalert2": "^7.19.1",
     "twitter-bootstrap-wizard": "^1.2.0",
     "web-animations-js": "2.2.2",
     "zone.js": "0.8.4"
