--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "fullcalendar": "3.4.0",
     "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git",
     "jasny-bootstrap": "3.1.3",
-    "jquery": "1.12.4",
+    "jquery": "^3.3.1",
     "nouislider": "9.2.0",
     "rxjs": "^5.5.7",
     "sweetalert2": "^7.19.1",
@@ -59,7 +59,7 @@
     "@angular/compiler-cli": "^5.2.9",
     "@types/bootstrap": "3.3.32",
     "@types/chartist": "0.9.34",
-    "@types/jquery": "1.10.31",
+    "@types/jquery": "^3.3.1",
     "@types/node": "^9.6.0",
     "codelyzer": "2.0.0",
     "gulp": "^3.9.1",
