--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngx-translate/http-loader": "^3.0.1",
     "@types/googlemaps": "3.26.14",
     "bootstrap": "3.3.5",
+    "bootstrap-datepicker": "^1.8.0",
     "bootstrap-notify": "3.1.3",
     "bootstrap-select": "1.12.2",
     "bootstrap-switch": "3.3.4",
