--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^5.2.9",
     "@angular/platform-server": "^5.2.9",
     "@angular/router": "^5.2.9",
+    "@ngui/auto-complete": "^1.0.2",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^3.0.1",
     "@types/googlemaps": "3.26.14",
@@ -48,6 +49,7 @@
     "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git",
     "jasny-bootstrap": "3.1.3",
     "jquery": "^3.3.1",
+    "ng2-ckeditor": "^1.2.0",
     "nouislider": "9.2.0",
     "rxjs": "^5.5.7",
     "sweetalert2": "^7.19.1",
