--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.15.6",
     "gdl-thesis-core": "git+https://github.com/giacomodeliberali/thesis-core.git#master",
     "inversify": "^4.11.1",
+    "inversify-inject-decorators": "^3.1.0",
     "javascript-state-machine": "^3.0.1",
     "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.5",
