--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.10",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/platform-server": "^5.2.9",
-    "@angular/router": "^5.2.9",
-    "@ngui/auto-complete": "^1.0.2",
-    "@ngx-translate/core": "^9.1.1",
+    "@angular/animations": "^6.0.3",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/platform-server": "^6.0.3",
+    "@angular/router": "^6.0.3",
+    "@ngui/auto-complete": "git+https://github.com/nfavaron/auto-complete.git#angular6-dist",
+    "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "@swimlane/ngx-datatable": "^13.0.1",
     "@types/googlemaps": "3.26.14",
@@ -52,20 +52,20 @@
     "jquery": "^3.3.1",
     "ng2-ckeditor": "^1.2.0",
     "nouislider": "9.2.0",
-    "rxjs": "^5.5.7",
+    "rxjs": "^6.2.0",
     "sweetalert2": "^7.19.1",
     "twitter-bootstrap-wizard": "^1.2.0",
     "web-animations-js": "2.2.2",
-    "zone.js": "0.8.4"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "^5.2.9",
+    "@angular-devkit/build-angular": "~0.6.6",
+    "@angular/cli": "^6.0.7",
+    "@angular/compiler-cli": "^6.0.3",
     "@types/bootstrap": "3.3.32",
     "@types/chartist": "0.9.34",
     "@types/jquery": "^3.3.1",
     "@types/node": "^9.6.0",
-    "codelyzer": "2.0.0",
     "gulp": "^3.9.1",
     "gulp-exec": "^3.0.1",
     "gulp-rename": "^1.2.2",
@@ -74,6 +74,6 @@
     "ts-node": "2.0.0",
     "tslint": "4.5.0",
     "typedoc": "^0.11.1",
-    "typescript": "^2.4.2"
+    "typescript": "^2.7.2"
   }
 }
