--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "inversify-inject-decorators": "^3.1.0",
     "javascript-state-machine": "^3.0.1",
     "jsonwebtoken": "^8.2.1",
+    "moment": "^2.22.2",
     "mongodb": "^3.0.5",
     "mongoose": "^5.0.14",
     "mongoose-autopopulate": "git+https://github.com/giacomodeliberali/mongoose-autopopulate.git#master",
@@ -42,6 +43,7 @@
     "passport": "^0.4.0",
     "passport-google-plus-token": "^2.1.0",
     "passport-jwt": "^4.0.0",
+    "pdfmake": "^0.1.36",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.8"
   },
@@ -53,6 +55,7 @@
     "@types/jsonwebtoken": "^7.2.6",
     "@types/mongoose": "^5.0.9",
     "@types/nodemailer": "^4.6.0",
+    "@types/pdfmake": "^0.1.1",
     "codelyzer": "^4.2.1",
     "gulp": "^3.9.1",
     "gulp-tslint": "^8.1.2",
