Clean .env server files

--- a/server/development.env
+++ b/server/development.env
@@ -2,16 +2,16 @@
 envFile=development.env
 
 # Database connection string
-dbConnectionString=mongodb://localhost:27017/dais
+dbConnectionString=
 
 # JsonWebToken secret
-jwtSecret=Development13@unive!
+jwtSecret=
 
 # Google authentication setup
-googleOAuthClientId=220120198496-hkvm483iubjh5fnbrtu6kspv3kfjgat2.apps.googleusercontent.com
-googleOAuthClientSecret=YjVWdW92hf-RNYsU9nh7QOvC
+googleOAuthClientId=
+googleOAuthClientSecret=
 
 # Email set up
-emailService=gmail
-emailUser=dev.dbgracoon@gmail.com
-emailPassword=Development13@unive!
+emailService=
+emailUser=
+emailPassword=
