--- a/server/production.env
+++ b/server/production.env
@@ -2,16 +2,16 @@
 envFile=production.env
 
 # Database connection string
-dbConnectionString=mongodb://giacomodeliberali:CHV1a0UL56oeei3X@cluster0-shard-00-00-9gjz3.mongodb.net:27017,cluster0-shard-00-01-9gjz3.mongodb.net:27017,cluster0-shard-00-02-9gjz3.mongodb.net:27017/test?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin
+dbConnectionString=
 
 # JsonWebToken secret
-jwtSecret=Development13@unive!
+jwtSecret=
 
 # Google authentication setup
-googleOAuthClientId=220120198496-hkvm483iubjh5fnbrtu6kspv3kfjgat2.apps.googleusercontent.com
-googleOAuthClientSecret=YjVWdW92hf-RNYsU9nh7QOvC
+googleOAuthClientId=
+googleOAuthClientSecret=
 
 # Email set up
-emailService=gmail
-emailUser=dev.dbgracoon@gmail.com
-emailPassword=Development13@unive!
+emailService=
+emailUser=
+emailPassword=
